p2/conf/app2.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      volumes:
        - name: app2-vol
          configMap:
            name: app-configmap
      containers:
        - name: app2
          image: richarvey/nginx-php-fpm
          volumeMounts:
            - name: app2-vol
              mountPath: /var/www/html
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80 
  type: ClusterIP
