p2/conf/app3.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      volumes:
        - name: app3-vol
          configMap:
            name: app-configmap
      containers:
        - name: app3
          image: richarvey/nginx-php-fpm
          volumeMounts:
            - name: app3-vol
              mountPath: /var/www/html
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80 
  type: ClusterIP
